// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransfersService should return all transfers for user 1`] = `
{
  "currentPage": 1,
  "data": [
    {
      "amount": "2000",
      "categories": [],
      "date": 2023-01-10T11:12:00.000Z,
      "description": "Transfer 13 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94d6",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2023-01-10T11:12:00.000Z,
      "description": "Transfer 13 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc943e",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-12-10T11:12:00.000Z,
      "description": "Transfer 12 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94cd",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-12-10T11:12:00.000Z,
      "description": "Transfer 12 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc9435",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "2000",
      "categories": [],
      "date": 2022-11-10T11:12:00.000Z,
      "description": "Transfer 11 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94c4",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-11-10T11:12:00.000Z,
      "description": "Transfer 11 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc942c",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-10-10T11:12:00.000Z,
      "description": "Transfer 10 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94bb",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "500",
      "categories": [],
      "date": 2022-10-10T11:12:00.000Z,
      "description": "Transfer 10 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc9423",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-09-10T11:12:00.000Z,
      "description": "Transfer 9 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94b2",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "500",
      "categories": [],
      "date": 2022-09-10T11:12:00.000Z,
      "description": "Transfer 9 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc941a",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "2000",
      "categories": [],
      "date": 2022-08-10T11:12:00.000Z,
      "description": "Transfer 8 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94a9",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "2000",
      "categories": [],
      "date": 2022-08-10T11:12:00.000Z,
      "description": "Transfer 8 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc9411",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-07-10T11:12:00.000Z,
      "description": "Transfer 7 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94a0",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "500",
      "categories": [],
      "date": 2022-07-10T11:12:00.000Z,
      "description": "Transfer 7 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc9408",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-06-10T11:12:00.000Z,
      "description": "Transfer 6 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc9497",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-06-10T11:12:00.000Z,
      "description": "Transfer 6 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc93ff",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "100",
      "categories": [],
      "date": 2022-05-10T11:12:00.000Z,
      "description": "Transfer 5 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc948e",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-05-10T11:12:00.000Z,
      "description": "Transfer 5 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc93f6",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "3000",
      "categories": [],
      "date": 2022-04-10T11:12:00.000Z,
      "description": "Transfer 4 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc9485",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-04-10T11:12:00.000Z,
      "description": "Transfer 4 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc93ed",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-03-10T11:12:00.000Z,
      "description": "Transfer 3 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc947c",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-03-10T11:12:00.000Z,
      "description": "Transfer 3 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc93e4",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-02-10T11:12:00.000Z,
      "description": "Transfer 2 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc9473",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-02-10T11:12:00.000Z,
      "description": "Transfer 2 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df678d8ef53dcb2bc93db",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1124.8",
      "categories": [],
      "date": 2022-01-21T07:18:00.000Z,
      "description": "Dummy transfer 93",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd36ba655edad8f8533",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1018.25",
      "categories": [],
      "date": 2022-01-20T23:35:00.000Z,
      "description": "Dummy transfer 77",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befd06ba655edad8f84cb",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "838.6",
      "categories": [],
      "date": 2022-01-16T04:17:00.000Z,
      "description": "Dummy transfer 57",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befcd6ba655edad8f8453",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "464.69",
      "categories": [],
      "date": 2022-01-11T07:25:00.000Z,
      "description": "Dummy transfer 69",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befcf6ba655edad8f849b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-01-10T11:12:00.000Z,
      "description": "Transfer 1 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc946a",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-01-10T11:12:00.000Z,
      "description": "Transfer 1 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df678d8ef53dcb2bc93d2",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1297.3",
      "categories": [],
      "date": 2022-01-08T02:10:00.000Z,
      "description": "Dummy transfer 94",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befd36ba655edad8f853b",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "621.79",
      "categories": [],
      "date": 2022-01-07T14:37:00.000Z,
      "description": "Dummy transfer 22",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc66ba655edad8f835b",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1786.09",
      "categories": [],
      "date": 2022-01-06T08:33:00.000Z,
      "description": "Dummy transfer 87",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befd26ba655edad8f8513",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1300.68",
      "categories": [],
      "date": 2022-01-06T04:16:00.000Z,
      "description": "Dummy transfer 52",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befcc6ba655edad8f8433",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "59.54",
      "categories": [],
      "date": 2021-12-29T17:55:00.000Z,
      "description": "Dummy transfer 16",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc56ba655edad8f832b",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "853.22",
      "categories": [],
      "date": 2021-12-27T21:40:00.000Z,
      "description": "Dummy transfer 42",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befca6ba655edad8f83eb",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "745.44",
      "categories": [],
      "date": 2021-12-23T07:53:00.000Z,
      "description": "Dummy transfer 33",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc86ba655edad8f83ab",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "501.97",
      "categories": [],
      "date": 2021-12-22T13:43:00.000Z,
      "description": "Dummy transfer 32",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc86ba655edad8f83a3",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1367.96",
      "categories": [],
      "date": 2021-12-18T02:46:00.000Z,
      "description": "Dummy transfer 54",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befcc6ba655edad8f843b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1920.84",
      "categories": [],
      "date": 2021-12-15T09:37:00.000Z,
      "description": "Dummy transfer 4",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc36ba655edad8f82cb",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "873.08",
      "categories": [],
      "date": 2021-12-15T08:10:00.000Z,
      "description": "Dummy transfer 48",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befcb6ba655edad8f8413",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "160.33",
      "categories": [],
      "date": 2021-12-13T05:20:00.000Z,
      "description": "Dummy transfer 36",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc96ba655edad8f83c3",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "970.41",
      "categories": [],
      "date": 2021-12-12T19:49:00.000Z,
      "description": "Dummy transfer 59",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befcd6ba655edad8f845b",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1663.98",
      "categories": [],
      "date": 2021-12-09T09:33:00.000Z,
      "description": "Dummy transfer 83",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd16ba655edad8f84f3",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "852.27",
      "categories": [],
      "date": 2021-12-07T06:16:00.000Z,
      "description": "Dummy transfer 26",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc76ba655edad8f8373",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1563.22",
      "categories": [],
      "date": 2021-12-01T09:59:00.000Z,
      "description": "Dummy transfer 96",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd46ba655edad8f854b",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "725.02",
      "categories": [],
      "date": 2021-11-30T09:45:00.000Z,
      "description": "Dummy transfer 66",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befce6ba655edad8f848b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1377.85",
      "categories": [],
      "date": 2021-11-24T19:58:00.000Z,
      "description": "Dummy transfer 67",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befce6ba655edad8f8493",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1611.43",
      "categories": [],
      "date": 2021-11-15T14:51:00.000Z,
      "description": "Dummy transfer 30",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc76ba655edad8f8393",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "150.89",
      "categories": [],
      "date": 2021-11-15T14:28:00.000Z,
      "description": "Dummy transfer 73",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befcf6ba655edad8f84b3",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "731.29",
      "categories": [],
      "date": 2021-11-10T19:42:00.000Z,
      "description": "Dummy transfer 23",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc66ba655edad8f8363",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1666.29",
      "categories": [],
      "date": 2021-11-07T15:43:00.000Z,
      "description": "Dummy transfer 65",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befce6ba655edad8f8483",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "986.98",
      "categories": [],
      "date": 2021-11-04T08:19:00.000Z,
      "description": "Dummy transfer 9",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc36ba655edad8f82f3",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "567.4",
      "categories": [],
      "date": 2021-11-03T14:42:00.000Z,
      "description": "Dummy transfer 6",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc36ba655edad8f82db",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1384.83",
      "categories": [],
      "date": 2021-10-23T00:56:00.000Z,
      "description": "Dummy transfer 39",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc96ba655edad8f83d3",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1178.6",
      "categories": [],
      "date": 2021-10-03T07:34:00.000Z,
      "description": "Dummy transfer 90",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd36ba655edad8f852b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1058.72",
      "categories": [],
      "date": 2021-09-29T18:31:00.000Z,
      "description": "Dummy transfer 62",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befcd6ba655edad8f846b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1206.49",
      "categories": [],
      "date": 2021-09-22T05:52:00.000Z,
      "description": "Dummy transfer 10",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc46ba655edad8f82fb",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1677.13",
      "categories": [],
      "date": 2021-09-21T07:41:00.000Z,
      "description": "Dummy transfer 74",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd06ba655edad8f84bb",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1199.38",
      "categories": [],
      "date": 2021-09-18T05:59:00.000Z,
      "description": "Dummy transfer 37",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc96ba655edad8f83cb",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1646.9",
      "categories": [],
      "date": 2021-09-17T17:57:00.000Z,
      "description": "Dummy transfer 60",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befcd6ba655edad8f8463",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1605.25",
      "categories": [],
      "date": 2021-09-16T04:19:00.000Z,
      "description": "Dummy transfer 27",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc76ba655edad8f837b",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "127.84",
      "categories": [],
      "date": 2021-09-15T19:54:00.000Z,
      "description": "Dummy transfer 5",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc36ba655edad8f82d3",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1868.15",
      "categories": [],
      "date": 2021-09-11T01:01:00.000Z,
      "description": "Dummy transfer 56",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befcc6ba655edad8f844b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1360.98",
      "categories": [],
      "date": 2021-09-05T12:53:00.000Z,
      "description": "Dummy transfer 34",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc86ba655edad8f83b3",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1649.03",
      "categories": [],
      "date": 2021-08-29T10:47:00.000Z,
      "description": "Dummy transfer 98",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd46ba655edad8f855b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "348.62",
      "categories": [],
      "date": 2021-08-25T12:24:00.000Z,
      "description": "Dummy transfer 40",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc96ba655edad8f83db",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "825.83",
      "categories": [],
      "date": 2021-08-24T20:58:00.000Z,
      "description": "Dummy transfer 7",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc36ba655edad8f82e3",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "825.25",
      "categories": [],
      "date": 2021-08-20T23:40:00.000Z,
      "description": "Dummy transfer 41",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befca6ba655edad8f83e3",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1086.87",
      "categories": [],
      "date": 2021-08-20T16:12:00.000Z,
      "description": "Dummy transfer 31",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc86ba655edad8f839b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "324.09",
      "categories": [],
      "date": 2021-08-19T15:41:00.000Z,
      "description": "Dummy transfer 35",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc86ba655edad8f83bb",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1410.02",
      "categories": [],
      "date": 2021-08-14T08:55:00.000Z,
      "description": "Dummy transfer 15",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc56ba655edad8f8323",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "381.97",
      "categories": [],
      "date": 2021-08-07T20:58:00.000Z,
      "description": "Dummy transfer 55",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befcc6ba655edad8f8443",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1867.24",
      "categories": [],
      "date": 2021-08-07T08:31:00.000Z,
      "description": "Dummy transfer 20",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc66ba655edad8f834b",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1887.67",
      "categories": [],
      "date": 2021-08-06T07:37:00.000Z,
      "description": "Dummy transfer 12",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc46ba655edad8f830b",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1799.66",
      "categories": [],
      "date": 2021-07-31T20:26:00.000Z,
      "description": "Dummy transfer 95",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd46ba655edad8f8543",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "959.54",
      "categories": [],
      "date": 2021-07-21T22:26:00.000Z,
      "description": "Dummy transfer 64",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befce6ba655edad8f847b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "88.59",
      "categories": [],
      "date": 2021-07-20T23:15:00.000Z,
      "description": "Dummy transfer 86",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd26ba655edad8f850b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "867.01",
      "categories": [],
      "date": 2021-07-20T20:32:00.000Z,
      "description": "Dummy transfer 17",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc56ba655edad8f8333",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1472.83",
      "categories": [],
      "date": 2021-07-20T02:50:00.000Z,
      "description": "Dummy transfer 11",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc46ba655edad8f8303",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1266.39",
      "categories": [],
      "date": 2021-07-17T05:25:00.000Z,
      "description": "Dummy transfer 25",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc76ba655edad8f836b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "26.54",
      "categories": [],
      "date": 2021-07-13T14:34:00.000Z,
      "description": "Dummy transfer 80",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befd16ba655edad8f84db",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1063.65",
      "categories": [],
      "date": 2021-06-25T22:01:00.000Z,
      "description": "Dummy transfer 50",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befcb6ba655edad8f8423",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1865",
      "categories": [],
      "date": 2021-06-25T10:02:00.000Z,
      "description": "Dummy transfer 70",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befcf6ba655edad8f84a3",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1935.69",
      "categories": [],
      "date": 2021-06-06T19:36:00.000Z,
      "description": "Dummy transfer 44",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befca6ba655edad8f83fb",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1954.19",
      "categories": [],
      "date": 2021-06-04T23:31:00.000Z,
      "description": "Dummy transfer 89",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befd26ba655edad8f8523",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "663.32",
      "categories": [],
      "date": 2021-05-18T20:51:00.000Z,
      "description": "Dummy transfer 76",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd06ba655edad8f84c3",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "651.08",
      "categories": [],
      "date": 2021-05-04T19:38:00.000Z,
      "description": "Dummy transfer 43",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befca6ba655edad8f83f3",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "325.94",
      "categories": [],
      "date": 2021-04-25T15:21:00.000Z,
      "description": "Dummy transfer 13",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc46ba655edad8f8313",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "737.31",
      "categories": [],
      "date": 2021-04-23T22:53:00.000Z,
      "description": "Dummy transfer 51",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befcb6ba655edad8f842b",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1053.25",
      "categories": [],
      "date": 2021-04-16T16:53:00.000Z,
      "description": "Dummy transfer 29",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc76ba655edad8f838b",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1017.33",
      "categories": [],
      "date": 2021-04-14T04:46:00.000Z,
      "description": "Dummy transfer 3",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc26ba655edad8f82c3",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1150.03",
      "categories": [],
      "date": 2021-04-12T10:37:00.000Z,
      "description": "Dummy transfer 2",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc26ba655edad8f82bb",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1826.34",
      "categories": [],
      "date": 2021-04-11T10:21:00.000Z,
      "description": "Dummy transfer 97",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befd46ba655edad8f8553",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1403.68",
      "categories": [],
      "date": 2021-04-09T17:38:00.000Z,
      "description": "Dummy transfer 1",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc26ba655edad8f82b3",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "771.91",
      "categories": [],
      "date": 2021-04-04T21:59:00.000Z,
      "description": "Dummy transfer 85",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befd26ba655edad8f8503",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "787.9",
      "categories": [],
      "date": 2021-04-01T17:03:00.000Z,
      "description": "Dummy transfer 14",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc46ba655edad8f831b",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1297.64",
      "categories": [],
      "date": 2021-03-30T01:27:00.000Z,
      "description": "Dummy transfer 21",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc66ba655edad8f8353",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1239.46",
      "categories": [],
      "date": 2021-03-27T07:13:00.000Z,
      "description": "Dummy transfer 79",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befd16ba655edad8f84d3",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1590.98",
      "categories": [],
      "date": 2021-03-23T07:54:00.000Z,
      "description": "Dummy transfer 84",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befd16ba655edad8f84fb",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "583.77",
      "categories": [],
      "date": 2021-03-15T01:26:00.000Z,
      "description": "Dummy transfer 63",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befce6ba655edad8f8473",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1279.27",
      "categories": [],
      "date": 2021-03-09T09:08:00.000Z,
      "description": "Dummy transfer 18",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc56ba655edad8f833b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1284.98",
      "categories": [],
      "date": 2021-03-08T14:24:00.000Z,
      "description": "Dummy transfer 45",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befca6ba655edad8f8403",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "109.53",
      "categories": [],
      "date": 2021-03-05T13:18:00.000Z,
      "description": "Dummy transfer 88",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd26ba655edad8f851b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "974.01",
      "categories": [],
      "date": 2021-03-03T14:31:00.000Z,
      "description": "Dummy transfer 49",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befcb6ba655edad8f841b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1613.09",
      "categories": [],
      "date": 2021-03-03T05:05:00.000Z,
      "description": "Dummy transfer 81",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd16ba655edad8f84e3",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "304.68",
      "categories": [],
      "date": 2021-03-03T00:49:00.000Z,
      "description": "Dummy transfer 8",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc36ba655edad8f82eb",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1901.59",
      "categories": [],
      "date": 2021-03-01T03:31:00.000Z,
      "description": "Dummy transfer 82",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befd16ba655edad8f84eb",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "318.22",
      "categories": [],
      "date": 2021-02-21T19:23:00.000Z,
      "description": "Dummy transfer 28",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc76ba655edad8f8383",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1985.38",
      "categories": [],
      "date": 2021-02-21T01:34:00.000Z,
      "description": "Dummy transfer 72",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befcf6ba655edad8f84ab",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "263.29",
      "categories": [],
      "date": 2021-02-10T03:19:00.000Z,
      "description": "Dummy transfer 46",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befca6ba655edad8f840b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1711.03",
      "categories": [],
      "date": 2021-02-01T16:18:00.000Z,
      "description": "Dummy transfer 19",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc56ba655edad8f8343",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
  ],
  "hasNextPage": false,
  "hasPreviousPage": false,
  "limit": 112,
  "totalPageCount": 1,
  "totalRowCount": 112,
}
`;

exports[`TransfersService should return all transfers for user for specified account types 1`] = `
{
  "currentPage": 1,
  "data": [
    {
      "amount": "2000",
      "categories": [],
      "date": 2023-01-10T11:12:00.000Z,
      "description": "Transfer 13 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94d6",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2023-01-10T11:12:00.000Z,
      "description": "Transfer 13 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc943e",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-12-10T11:12:00.000Z,
      "description": "Transfer 12 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94cd",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-12-10T11:12:00.000Z,
      "description": "Transfer 12 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc9435",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "2000",
      "categories": [],
      "date": 2022-11-10T11:12:00.000Z,
      "description": "Transfer 11 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94c4",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-11-10T11:12:00.000Z,
      "description": "Transfer 11 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc942c",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-10-10T11:12:00.000Z,
      "description": "Transfer 10 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94bb",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "500",
      "categories": [],
      "date": 2022-10-10T11:12:00.000Z,
      "description": "Transfer 10 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc9423",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-09-10T11:12:00.000Z,
      "description": "Transfer 9 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94b2",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "500",
      "categories": [],
      "date": 2022-09-10T11:12:00.000Z,
      "description": "Transfer 9 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc941a",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "2000",
      "categories": [],
      "date": 2022-08-10T11:12:00.000Z,
      "description": "Transfer 8 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94a9",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "2000",
      "categories": [],
      "date": 2022-08-10T11:12:00.000Z,
      "description": "Transfer 8 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc9411",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-07-10T11:12:00.000Z,
      "description": "Transfer 7 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc94a0",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "500",
      "categories": [],
      "date": 2022-07-10T11:12:00.000Z,
      "description": "Transfer 7 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc9408",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-06-10T11:12:00.000Z,
      "description": "Transfer 6 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc9497",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-06-10T11:12:00.000Z,
      "description": "Transfer 6 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc93ff",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "100",
      "categories": [],
      "date": 2022-05-10T11:12:00.000Z,
      "description": "Transfer 5 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc948e",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-05-10T11:12:00.000Z,
      "description": "Transfer 5 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc93f6",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "3000",
      "categories": [],
      "date": 2022-04-10T11:12:00.000Z,
      "description": "Transfer 4 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc9485",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-04-10T11:12:00.000Z,
      "description": "Transfer 4 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc93ed",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-03-10T11:12:00.000Z,
      "description": "Transfer 3 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc947c",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-03-10T11:12:00.000Z,
      "description": "Transfer 3 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df679d8ef53dcb2bc93e4",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-02-10T11:12:00.000Z,
      "description": "Transfer 2 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc9473",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-02-10T11:12:00.000Z,
      "description": "Transfer 2 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df678d8ef53dcb2bc93db",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1124.8",
      "categories": [],
      "date": 2022-01-21T07:18:00.000Z,
      "description": "Dummy transfer 93",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd36ba655edad8f8533",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1018.25",
      "categories": [],
      "date": 2022-01-20T23:35:00.000Z,
      "description": "Dummy transfer 77",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befd06ba655edad8f84cb",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "838.6",
      "categories": [],
      "date": 2022-01-16T04:17:00.000Z,
      "description": "Dummy transfer 57",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befcd6ba655edad8f8453",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "464.69",
      "categories": [],
      "date": 2022-01-11T07:25:00.000Z,
      "description": "Dummy transfer 69",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befcf6ba655edad8f849b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1500",
      "categories": [],
      "date": 2022-01-10T11:12:00.000Z,
      "description": "Transfer 1 to LONG_TERM_SAVINGS",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df6d4d8ef53dcb2bc946a",
      "toAccount": "663df623d8ef53dcb2bc93c0",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1000",
      "categories": [],
      "date": 2022-01-10T11:12:00.000Z,
      "description": "Transfer 1 to preassigned CASH",
      "fromAccount": "663df55ad8ef53dcb2bc9347",
      "id": "663df678d8ef53dcb2bc93d2",
      "toAccount": "663df62cd8ef53dcb2bc93c4",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1297.3",
      "categories": [],
      "date": 2022-01-08T02:10:00.000Z,
      "description": "Dummy transfer 94",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befd36ba655edad8f853b",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "621.79",
      "categories": [],
      "date": 2022-01-07T14:37:00.000Z,
      "description": "Dummy transfer 22",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc66ba655edad8f835b",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1786.09",
      "categories": [],
      "date": 2022-01-06T08:33:00.000Z,
      "description": "Dummy transfer 87",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befd26ba655edad8f8513",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1300.68",
      "categories": [],
      "date": 2022-01-06T04:16:00.000Z,
      "description": "Dummy transfer 52",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befcc6ba655edad8f8433",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "59.54",
      "categories": [],
      "date": 2021-12-29T17:55:00.000Z,
      "description": "Dummy transfer 16",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc56ba655edad8f832b",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "853.22",
      "categories": [],
      "date": 2021-12-27T21:40:00.000Z,
      "description": "Dummy transfer 42",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befca6ba655edad8f83eb",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "745.44",
      "categories": [],
      "date": 2021-12-23T07:53:00.000Z,
      "description": "Dummy transfer 33",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc86ba655edad8f83ab",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "501.97",
      "categories": [],
      "date": 2021-12-22T13:43:00.000Z,
      "description": "Dummy transfer 32",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc86ba655edad8f83a3",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1367.96",
      "categories": [],
      "date": 2021-12-18T02:46:00.000Z,
      "description": "Dummy transfer 54",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befcc6ba655edad8f843b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1920.84",
      "categories": [],
      "date": 2021-12-15T09:37:00.000Z,
      "description": "Dummy transfer 4",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc36ba655edad8f82cb",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "873.08",
      "categories": [],
      "date": 2021-12-15T08:10:00.000Z,
      "description": "Dummy transfer 48",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befcb6ba655edad8f8413",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "160.33",
      "categories": [],
      "date": 2021-12-13T05:20:00.000Z,
      "description": "Dummy transfer 36",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc96ba655edad8f83c3",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "970.41",
      "categories": [],
      "date": 2021-12-12T19:49:00.000Z,
      "description": "Dummy transfer 59",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befcd6ba655edad8f845b",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1663.98",
      "categories": [],
      "date": 2021-12-09T09:33:00.000Z,
      "description": "Dummy transfer 83",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd16ba655edad8f84f3",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "852.27",
      "categories": [],
      "date": 2021-12-07T06:16:00.000Z,
      "description": "Dummy transfer 26",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc76ba655edad8f8373",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1563.22",
      "categories": [],
      "date": 2021-12-01T09:59:00.000Z,
      "description": "Dummy transfer 96",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd46ba655edad8f854b",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "725.02",
      "categories": [],
      "date": 2021-11-30T09:45:00.000Z,
      "description": "Dummy transfer 66",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befce6ba655edad8f848b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1377.85",
      "categories": [],
      "date": 2021-11-24T19:58:00.000Z,
      "description": "Dummy transfer 67",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befce6ba655edad8f8493",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1611.43",
      "categories": [],
      "date": 2021-11-15T14:51:00.000Z,
      "description": "Dummy transfer 30",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc76ba655edad8f8393",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "150.89",
      "categories": [],
      "date": 2021-11-15T14:28:00.000Z,
      "description": "Dummy transfer 73",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befcf6ba655edad8f84b3",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "731.29",
      "categories": [],
      "date": 2021-11-10T19:42:00.000Z,
      "description": "Dummy transfer 23",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc66ba655edad8f8363",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1666.29",
      "categories": [],
      "date": 2021-11-07T15:43:00.000Z,
      "description": "Dummy transfer 65",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befce6ba655edad8f8483",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "986.98",
      "categories": [],
      "date": 2021-11-04T08:19:00.000Z,
      "description": "Dummy transfer 9",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc36ba655edad8f82f3",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "567.4",
      "categories": [],
      "date": 2021-11-03T14:42:00.000Z,
      "description": "Dummy transfer 6",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc36ba655edad8f82db",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1384.83",
      "categories": [],
      "date": 2021-10-23T00:56:00.000Z,
      "description": "Dummy transfer 39",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc96ba655edad8f83d3",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1178.6",
      "categories": [],
      "date": 2021-10-03T07:34:00.000Z,
      "description": "Dummy transfer 90",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd36ba655edad8f852b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1058.72",
      "categories": [],
      "date": 2021-09-29T18:31:00.000Z,
      "description": "Dummy transfer 62",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befcd6ba655edad8f846b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1206.49",
      "categories": [],
      "date": 2021-09-22T05:52:00.000Z,
      "description": "Dummy transfer 10",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc46ba655edad8f82fb",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1677.13",
      "categories": [],
      "date": 2021-09-21T07:41:00.000Z,
      "description": "Dummy transfer 74",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd06ba655edad8f84bb",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1199.38",
      "categories": [],
      "date": 2021-09-18T05:59:00.000Z,
      "description": "Dummy transfer 37",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc96ba655edad8f83cb",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1646.9",
      "categories": [],
      "date": 2021-09-17T17:57:00.000Z,
      "description": "Dummy transfer 60",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befcd6ba655edad8f8463",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1605.25",
      "categories": [],
      "date": 2021-09-16T04:19:00.000Z,
      "description": "Dummy transfer 27",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc76ba655edad8f837b",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "127.84",
      "categories": [],
      "date": 2021-09-15T19:54:00.000Z,
      "description": "Dummy transfer 5",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc36ba655edad8f82d3",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1868.15",
      "categories": [],
      "date": 2021-09-11T01:01:00.000Z,
      "description": "Dummy transfer 56",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befcc6ba655edad8f844b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1360.98",
      "categories": [],
      "date": 2021-09-05T12:53:00.000Z,
      "description": "Dummy transfer 34",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc86ba655edad8f83b3",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1649.03",
      "categories": [],
      "date": 2021-08-29T10:47:00.000Z,
      "description": "Dummy transfer 98",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd46ba655edad8f855b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "348.62",
      "categories": [],
      "date": 2021-08-25T12:24:00.000Z,
      "description": "Dummy transfer 40",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc96ba655edad8f83db",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "825.83",
      "categories": [],
      "date": 2021-08-24T20:58:00.000Z,
      "description": "Dummy transfer 7",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc36ba655edad8f82e3",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "825.25",
      "categories": [],
      "date": 2021-08-20T23:40:00.000Z,
      "description": "Dummy transfer 41",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befca6ba655edad8f83e3",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1086.87",
      "categories": [],
      "date": 2021-08-20T16:12:00.000Z,
      "description": "Dummy transfer 31",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc86ba655edad8f839b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "324.09",
      "categories": [],
      "date": 2021-08-19T15:41:00.000Z,
      "description": "Dummy transfer 35",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc86ba655edad8f83bb",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1410.02",
      "categories": [],
      "date": 2021-08-14T08:55:00.000Z,
      "description": "Dummy transfer 15",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc56ba655edad8f8323",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "381.97",
      "categories": [],
      "date": 2021-08-07T20:58:00.000Z,
      "description": "Dummy transfer 55",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befcc6ba655edad8f8443",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1867.24",
      "categories": [],
      "date": 2021-08-07T08:31:00.000Z,
      "description": "Dummy transfer 20",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc66ba655edad8f834b",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1887.67",
      "categories": [],
      "date": 2021-08-06T07:37:00.000Z,
      "description": "Dummy transfer 12",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc46ba655edad8f830b",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1799.66",
      "categories": [],
      "date": 2021-07-31T20:26:00.000Z,
      "description": "Dummy transfer 95",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd46ba655edad8f8543",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "959.54",
      "categories": [],
      "date": 2021-07-21T22:26:00.000Z,
      "description": "Dummy transfer 64",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befce6ba655edad8f847b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "88.59",
      "categories": [],
      "date": 2021-07-20T23:15:00.000Z,
      "description": "Dummy transfer 86",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd26ba655edad8f850b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "867.01",
      "categories": [],
      "date": 2021-07-20T20:32:00.000Z,
      "description": "Dummy transfer 17",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc56ba655edad8f8333",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1472.83",
      "categories": [],
      "date": 2021-07-20T02:50:00.000Z,
      "description": "Dummy transfer 11",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc46ba655edad8f8303",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1266.39",
      "categories": [],
      "date": 2021-07-17T05:25:00.000Z,
      "description": "Dummy transfer 25",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc76ba655edad8f836b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "26.54",
      "categories": [],
      "date": 2021-07-13T14:34:00.000Z,
      "description": "Dummy transfer 80",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befd16ba655edad8f84db",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1063.65",
      "categories": [],
      "date": 2021-06-25T22:01:00.000Z,
      "description": "Dummy transfer 50",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befcb6ba655edad8f8423",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1865",
      "categories": [],
      "date": 2021-06-25T10:02:00.000Z,
      "description": "Dummy transfer 70",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befcf6ba655edad8f84a3",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1935.69",
      "categories": [],
      "date": 2021-06-06T19:36:00.000Z,
      "description": "Dummy transfer 44",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befca6ba655edad8f83fb",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1954.19",
      "categories": [],
      "date": 2021-06-04T23:31:00.000Z,
      "description": "Dummy transfer 89",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befd26ba655edad8f8523",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "663.32",
      "categories": [],
      "date": 2021-05-18T20:51:00.000Z,
      "description": "Dummy transfer 76",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd06ba655edad8f84c3",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "651.08",
      "categories": [],
      "date": 2021-05-04T19:38:00.000Z,
      "description": "Dummy transfer 43",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befca6ba655edad8f83f3",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "325.94",
      "categories": [],
      "date": 2021-04-25T15:21:00.000Z,
      "description": "Dummy transfer 13",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc46ba655edad8f8313",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "737.31",
      "categories": [],
      "date": 2021-04-23T22:53:00.000Z,
      "description": "Dummy transfer 51",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befcb6ba655edad8f842b",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1053.25",
      "categories": [],
      "date": 2021-04-16T16:53:00.000Z,
      "description": "Dummy transfer 29",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befc76ba655edad8f838b",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1017.33",
      "categories": [],
      "date": 2021-04-14T04:46:00.000Z,
      "description": "Dummy transfer 3",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc26ba655edad8f82c3",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1150.03",
      "categories": [],
      "date": 2021-04-12T10:37:00.000Z,
      "description": "Dummy transfer 2",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc26ba655edad8f82bb",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1826.34",
      "categories": [],
      "date": 2021-04-11T10:21:00.000Z,
      "description": "Dummy transfer 97",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befd46ba655edad8f8553",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1403.68",
      "categories": [],
      "date": 2021-04-09T17:38:00.000Z,
      "description": "Dummy transfer 1",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc26ba655edad8f82b3",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "771.91",
      "categories": [],
      "date": 2021-04-04T21:59:00.000Z,
      "description": "Dummy transfer 85",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befd26ba655edad8f8503",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "787.9",
      "categories": [],
      "date": 2021-04-01T17:03:00.000Z,
      "description": "Dummy transfer 14",
      "fromAccount": "61460d9454ea082ad0256762",
      "id": "624befc46ba655edad8f831b",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1297.64",
      "categories": [],
      "date": 2021-03-30T01:27:00.000Z,
      "description": "Dummy transfer 21",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befc66ba655edad8f8353",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1239.46",
      "categories": [],
      "date": 2021-03-27T07:13:00.000Z,
      "description": "Dummy transfer 79",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befd16ba655edad8f84d3",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1590.98",
      "categories": [],
      "date": 2021-03-23T07:54:00.000Z,
      "description": "Dummy transfer 84",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befd16ba655edad8f84fb",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "583.77",
      "categories": [],
      "date": 2021-03-15T01:26:00.000Z,
      "description": "Dummy transfer 63",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befce6ba655edad8f8473",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1279.27",
      "categories": [],
      "date": 2021-03-09T09:08:00.000Z,
      "description": "Dummy transfer 18",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befc56ba655edad8f833b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1284.98",
      "categories": [],
      "date": 2021-03-08T14:24:00.000Z,
      "description": "Dummy transfer 45",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befca6ba655edad8f8403",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "109.53",
      "categories": [],
      "date": 2021-03-05T13:18:00.000Z,
      "description": "Dummy transfer 88",
      "fromAccount": "61460d8554ea082ad0256759",
      "id": "624befd26ba655edad8f851b",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "974.01",
      "categories": [],
      "date": 2021-03-03T14:31:00.000Z,
      "description": "Dummy transfer 49",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befcb6ba655edad8f841b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1613.09",
      "categories": [],
      "date": 2021-03-03T05:05:00.000Z,
      "description": "Dummy transfer 81",
      "fromAccount": "61460db554ea082ad0256774",
      "id": "624befd16ba655edad8f84e3",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "304.68",
      "categories": [],
      "date": 2021-03-03T00:49:00.000Z,
      "description": "Dummy transfer 8",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc36ba655edad8f82eb",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1901.59",
      "categories": [],
      "date": 2021-03-01T03:31:00.000Z,
      "description": "Dummy transfer 82",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befd16ba655edad8f84eb",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "318.22",
      "categories": [],
      "date": 2021-02-21T19:23:00.000Z,
      "description": "Dummy transfer 28",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befc76ba655edad8f8383",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1985.38",
      "categories": [],
      "date": 2021-02-21T01:34:00.000Z,
      "description": "Dummy transfer 72",
      "fromAccount": "61460de154ea082ad0256786",
      "id": "624befcf6ba655edad8f84ab",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "263.29",
      "categories": [],
      "date": 2021-02-10T03:19:00.000Z,
      "description": "Dummy transfer 46",
      "fromAccount": "61460dd554ea082ad025677d",
      "id": "624befca6ba655edad8f840b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
    },
    {
      "amount": "1711.03",
      "categories": [],
      "date": 2021-02-01T16:18:00.000Z,
      "description": "Dummy transfer 19",
      "fromAccount": "61460da354ea082ad025676b",
      "id": "624befc56ba655edad8f8343",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
    },
  ],
  "hasNextPage": false,
  "hasPreviousPage": false,
  "limit": 100,
  "totalPageCount": 1,
  "totalRowCount": 100,
}
`;

exports[`TransfersService should return one transfer for user 1`] = `
{
  "amount": "2000",
  "categories": [],
  "date": 2022-08-10T11:12:00.000Z,
  "description": "Transfer 8 to preassigned CASH",
  "fromAccount": "663df55ad8ef53dcb2bc9347",
  "id": "663df679d8ef53dcb2bc9411",
  "toAccount": "663df62cd8ef53dcb2bc93c4",
  "userId": "61460d7354ea082ad0256749",
}
`;
